2013-02-28  Patrice Dumas  <pertusus@free.fr>

	* tp/t/test_utils.pl: close generated files before doing the comparison.
	* tp/Texinfo/Convert/Plaintext.pm, tp/Texinfo/Convert/Info.pm:
	cache get_conf() results.  Convert node names only once.
	* tp/texi2any.pl, doc/texinfo.txi (Customization Variables and Options):
	two new formats, parse and structure that respectively do the parsing 
	phase, and the parsing and structuring phase, and no conversion.

2013-02-26  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Generating HTML, HTML CSS): xref to
	Customization Variables.  Suggestion from Vincent Belaiche.

2013-02-25  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Parser.pm: use tell to find the position of the 
	beginning of the line.
	Close line @-command with special @-commands if there is no comment
	ending the line.  Report from Eli Zaretskii on bug-texinfo,
	24 Feb 2013 17:53:15.
	* configure.ac, tp/defs.in, tp/tests/run_parser_all.sh:
	determine whether diff accepts -a and sets DIFF_A_OPTION to -a if so.

2013-02-24  Karl Berry  <karl@gnu.org>

	* tp/Makefile.am (install-exec-hook): rm old makeinfo,
	possibly a binary, before making the link.
	Report from Ken Moffat, 23 Feb 2013 21:31:33.

	* doc/texinfo.txi (Other Customization Variables): OPEN_ and
	CLOSE_QUOTE_SYMBOL now apply to Info too.
	(@t{@@code}): mention this.
	(@t{@@set @@value}): grudgingly mention that some non-alphanumerics
	sometimes work in @set names.

2013-02-24  Patrice Dumas  <pertusus@free.fr>

	* configure.ac, tp/defs.in, tp/tests/*/*.sh,
	tp/tests/run_parser_all.sh:
	determine whether diff accepts -u and sets DIFF_U_OPTION to -u if so.
	Report that HP-UX diff do not accept -u from Richard Lloyd
	bug-texinfo, 19 Feb 2013 15:56:41.

2013-02-23  Patrice Dumas  <pertusus@free.fr>

	* tp/t/input_files/sample_utf8.texi: avoid having two nodes differing
	only in case, for case-sensitve filesystems.
	Report in http://savannah.gnu.org/bugs/?38380.