@@ -1,0 +1,1 @@
+empty.texi: warning: must specify a title with a title command or @top
