@@ -1,0 +1,1 @@
+one_line.texi: warning: must specify a title with a title command or @top
