@@ -1,0 +1,1 @@
+one_line_no_content.texi: warning: must specify a title with a title command or @top
